crates/rym_parser/src/tests/snapshots/learn_chumsky__tests__expr__unary_expressions-6.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
!false
---

Some(
    Spanned(
        Unary(
            Not,
            Spanned(
                Ident("false"),
                1..6,
            ),
        ),
        0..6,
    ),
)

--- Errors ---
[]
---
