crates/rym_parser/src/tests/snapshots/learn_chumsky__tests__expr__unary_expressions-8.snap
---
source: src/tests/expr.rs
expression: "&snapshot"
---
--- Input ---
!(lhs == rhs)
---

Some(
    Spanned(
        Unary(
            Not,
            Spanned(
                Binary(
                    Spanned(
                        Ident("lhs"),
                        2..5,
                    ),
                    Eq,
                    Spanned(
                        Ident("rhs"),
                        9..12,
                    ),
                ),
                2..12,
            ),
        ),
        0..12,
    ),
)

--- Errors ---
[]
---
